2011-05-16  Rolf Seuster <seuster AT cern.ch>
	* run DQHistogramMerge with only single process even with athenaMP
	* Tagging as PATJobTransforms-00-03-41

2011-05-12 Walter Lampl <walter.lampl@cern.ch>
	* Modifications to Configuration.py and skeleton.AODtoTAG_trf.py to run
	  TAG and FastPhysicsMonitoring in the same athena step. 
	* Tagging as PATJobTransforms-00-03-40

2011-05-11  Junji Tojo <Junji.Tojo@cern.ch>
	* Add NTUP_BTAGD3PD in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-39

2011-05-09 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Modified python/Configuration.py to use the 'SubSteps' property
	  of the D3PD production flags when setting up the possible
	  D3PD outputs. This exchanges the previous blanket
	  ['a2d','e2d'] definition, and makes it possible to run large
	  D3PD production jobs with D3PD produced at different steps.
	* Tagging as PATJobTransforms-00-03-38

2011-05-04  Sami Kama  <sami.kama@cern.ch>
	* Changed skeleton.DQHistogramMerge_trf.py to use subprocess module to prevent stray processes
	* Tagging as PATJobTransforms-00-03-37
	
2011-05-03  David Cote  <david.cote@cern.ch>
	* Added outputNTUP_TRUTHFile to Reco_trf for step a2d
	* Tagging as PATJobTransforms-00-03-36

2011-05-01  Rolf Seuster <seuster AT cern.ch>
	* fixing the misspelled rec.OutputFileNameForRecoStep in skeleton.ESDtoDPD_trf.py
	* Tagging as PATJobTransforms-00-03-35

2011-04-29  Rolf Seuster <seuster AT cern.ch>
	* python/Configuration.py: add logic for new outputfile outputHIST_PHYSVALMONFile
	* scripts/Reco_trf.py:     add it to ListOfDefaultPositionalKeys
	* Tagging as PATJobTransforms-00-03-34

2011-04-28  Rolf Seuster <seuster AT cern.ch>
	* adding rec.OutputFileNameForRecoStep to skeleton.ESDtoDPD_trf.py
	* Tagging as PATJobTransforms-00-03-33

2011-04-21  Junji Tojo <Junji.Tojo@cern.ch>
	* Add NTUP_PHOTON in script/Merging_trf.py
	* Tagging as PATJobTransforms-00-03-32
	
2011-03-30  John Chapman  <John.Chapman@cern.ch>