@@ -1,3 +1,7 @@
+2011-05-21  Maarten Boonekamp
+	* add NTUP_LARNOISE
+	* Tagging as PATJobTransforms-00-03-42
+
 2011-05-16  Rolf Seuster <seuster AT cern.ch>
 	* run DQHistogramMerge with only single process even with athenaMP
 	* Tagging as PATJobTransforms-00-03-41
